src/test/resources/30/single/xhtml/valid/issue777-empty-lang.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
	<head>
		<title>Allow empty lang attribute</title>
	</head>
	<body>
		<p lang="" xml:lang="">This para has an empty lang attribute which was invalid prior to v4.1</p>
		<p>Details: https://github.com/IDPF/epubcheck/issues/777</p>
	</body>
</html>