src/test/resources/30/single/xhtml/invalid/edupub-sectioning-subtitle.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<?xml-model href="../../../../../../../../../git-local/epubcheck/src/main/resources/com/adobe/epubcheck/schema/30/edupub/edu-structure.sch" type="application/xml" schematypens="http://purl.oclc.org/dsdl/schematron"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>EDUPUB headings test</title>
    </head>
    <body>
    		<section aria-label="assd">
    			<h1>Sub-sub-subsection</h1>
    			<p epub:type="subtitle">Need a header!</p>
    			<p>Lorem Ispum Dolor...</p>
    		</section>
    </body>
</html>